--- a/samples/SherlogServer/SherlogServer.csproj
+++ b/samples/SherlogServer/SherlogServer.csproj
@@ -1,19 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>true</ImplicitUsings>
-    <IsPackable>false</IsPackable>
-    <IsPublishable>false</IsPublishable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>true</ImplicitUsings>
+        <IsPackable>true</IsPackable>
+        <IsPublishable>true</IsPublishable>
+        <PublishSingleFile>true</PublishSingleFile>
+        <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+        <!-- 针对64位Windows的发布 -->
+        <SelfContained>true</SelfContained>
+        <!-- 包含.NET运行时 -->
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="TCPeasy.Cli" Version="1.*" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="TCPeasy.Cli" Version="1.*" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="../../src/Sherlog.Formatters/Sherlog.Formatters.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="../../src/Sherlog.Formatters/Sherlog.Formatters.csproj" />
+    </ItemGroup>
 
 </Project>
