integrated into sherlog.csproj

--- a/tests/Sherlog.Formatters.Tests/Sherlog.Formatters.Tests.csproj
+++ b/tests/Sherlog.Formatters.Tests/Sherlog.Formatters.Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../../src/Sherlog.Formatters/Sherlog.Formatters.csproj" />
+    <ProjectReference Include="..\..\src\Sherlog\Sherlog.csproj" />
   </ItemGroup>
 
 </Project>
