--- a/LLog/LLog.csproj
+++ b/LLog/LLog.csproj
@@ -2,18 +2,17 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
+        <DebugType>none</DebugType>
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\src\Sherlog.Appenders\Sherlog.Appenders.csproj" />
-        <ProjectReference Include="..\src\Sherlog.Formatters\Sherlog.Formatters.csproj" />
         <ProjectReference Include="..\src\Sherlog\Sherlog.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <Reference Include="UnityEngine">
-            <HintPath>..\..\..\..\..\Program Files\Unity\Hub\Editor\2022.3.20f1\Editor\Data\Managed\UnityEngine.dll</HintPath>
-        </Reference>
+      <Reference Include="UnityEngine">
+        <HintPath>G:\Unity\6000.0.7f1\Editor\Data\Managed\UnityEngine.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
