--- a/src/Sherlog/Sherlog.csproj
+++ b/src/Sherlog/Sherlog.csproj
@@ -1,8 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>$(DefaultTargetFramework)</TargetFramework>
     <Version>1.0.0</Version>
+    <DebugType>none</DebugType>
   </PropertyGroup>
 
 </Project>
