--- a/tests/Sherlog.Formatters.Tests/Sherlog.Formatters.Tests.csproj
+++ b/tests/Sherlog.Formatters.Tests/Sherlog.Formatters.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>$(DefaultTestTargetFramework)</TargetFramework>
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Sherlog.Formatters\Sherlog.Formatters.csproj" />
     <ProjectReference Include="..\..\src\Sherlog\Sherlog.csproj" />
   </ItemGroup>
 
