--- a/src/Sherlog.Appenders/Sherlog.Appenders.csproj
+++ b/src/Sherlog.Appenders/Sherlog.Appenders.csproj
@@ -1,16 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>$(DefaultTargetFramework)</TargetFramework>
     <Version>1.0.3</Version>
   </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="../Sherlog/Sherlog.csproj" />
-  </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="TCPeasy" Version="1.*" />
+      <PackageReference Include="TCPeasy" Version="1.*" />
+      <ProjectReference Include="../Sherlog/Sherlog.csproj" />
   </ItemGroup>
 
 </Project>
