--- a/samples/SherlogServer/SherlogServer.csproj
+++ b/samples/SherlogServer/SherlogServer.csproj
@@ -6,10 +6,11 @@
         <ImplicitUsings>true</ImplicitUsings>
         <IsPackable>true</IsPackable>
         <IsPublishable>true</IsPublishable>
-        <PublishSingleFile>true</PublishSingleFile>
-        <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+        <!--vs调试时候要注释下面三个-->
+        <!--<PublishSingleFile>true</PublishSingleFile>-->
+        <!--<RuntimeIdentifier>win-x64</RuntimeIdentifier>-->
         <!-- 针对64位Windows的发布 -->
-        <SelfContained>true</SelfContained>
+        <!--<SelfContained>true</SelfContained>-->
         <!-- 包含.NET运行时 -->
     </PropertyGroup>
 
